--- a/index.html
+++ b/index.html
@@ -6,58 +6,59 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>2023년 버킷리스트</title>
-    <stlye>
+    <style>
         @import url('https://fonts.googleapis.com/css2?family=Hahmlet:wght@400;500;600;700&display=swap');
         * {
-            font-family: 'Hahmlet', serif;
+            font-family: 'Hahmlet', serif
         }
         .title {
-        color: white;
-        background-color: tomato;
-        font-size: 24px;
-        padding: 4px 14px;
-        border-radius: 8px;
+            color: white;
+            background-color: tomato;
+            font-size: 24px;
+            padding: 8px 14px;
+            border-radius: 8px;
         }
 
-
-        .bg 
-        width: 360px;
-        background-image :
-        url("https://s3.ap-northeast-2.amazonaws.com/materials.spartacodingclub.kr/bucketList/bg-grid.png");
+        .bg {
+            width: 360px;
+            background-image: url("https://s3.ap-northeast-2.amazonaws.com/materials.spartacodingclub.kr/bucketList/bg-grid.png");
         }
+
         .msg {
-        font-weight: bold;
+            font-weight: bold;
         }
+
         .bucket {
-        width: 160px;
-        height: 160px;
+            width: 160px;
+            height: 160px;
         }
+
         .img1 {
-        background-image:
-        url("https://s3.ap-northeast-2.amazonaws.com/materials.spartacodingclub.kr/bucketList/bucket-red.png");
-        background-size: cover;
-        background-position: center;
+            background-image: url("https://s3.ap-northeast-2.amazonaws.com/materials.spartacodingclub.kr/bucketList/bucket-red.png");
+            background-size: cover;
+            background-position: center;
         }
-        。img2 {
-        background-image:
-        url("https://s3.ap-northeast-2.amazonaws.com/materials.spartacodingclub.kr/bucketList/bucket-lightred.png");
-        background-size: cover;
-        background-position: center;
+
+        .img2 {
+            background-image: url("https://s3.ap-northeast-2.amazonaws.com/materials.spartacodingclub.kr/bucketList/bucket-lightred.png");
+            background-size: cover;
+            background-position: center;
         }
-    </stlye>
+    </style>
     <link rel="stylesheet" type="text/css" href="https://s3.ap-northeast-2.amazonaws.com/materials.spartacodingclub.kr/bucketList/sparta-bucket2.css">
 </head>
 
-<body class="bg-t3 center">
-    <h1 class="title-t4">2023년 신년계획</h1>
-    <p class="msg">올해는 꼭 모두 지키자!</p>
+<body class="bg-t5 center">
+    <h1 class="title">2023 신년계획</h1>
+    <p class="msg">올해는 꼭 모두 해내자!!</p>
     <div class="row flex-row wrap">
-        <div class="bucket img1-t2 center">바디프로필 찍기</div>
-        <div class="bucket img2-t5 center">엑셀 자격증 취득</div>
-        <div class="bucket img2-t7 center">토익 900점 혹은 스피킹 취득</div>
-        <div class="bucket img1-t4 center">이직 및 다른 직업 찾기</div>
-        <div class="bucket img1-t6 center">아파트 대출금 압박 버티기</div>
-        <div class="bucket img2-t3 center">정신적으로 더 강해지기</div>
+        <div class="bucket img1-t3 center done">몸무게 8kg 줄이고 복근 만들기</div>
+        <div class="bucket img2-t3 center">토익 점수 900점 이상 획득</div>
+        <div class="bucket img2-t5 center">엑셀 및 코딩 능력 강화</div>
+        <div class="bucket img1-t5 center">자격증 취득 (관광통역, 무역영어, 생활체육3급)</div>
+        <div class="bucket img1-t6 center">월 1~2회 이력서 제출(이직 꾸준히 시도)</div>
+        <div class="bucket img2-t6 center">대출 원금 년 최소 1000만 이상 갚기</div>
+        <div class="bucket img2-t3 center">투자금 매분기 120만원 증액</div>
     </div>
 
 </body>
