--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     <h1 class="title">2023 신년계획</h1>
     <p class="msg">올해는 꼭 모두 해내자!!</p>
     <div class="row flex-row wrap">
-        <div class="bucket img1-t3 center done">몸무게 8kg 줄이고 복근 만들기</div>
+        <div class="bucket img1-t3 center">몸무게 8kg 줄이고 복근 만들기</div>
         <div class="bucket img2-t3 center">토익 점수 900점 이상 획득</div>
         <div class="bucket img2-t5 center">엑셀 및 코딩 능력 강화</div>
         <div class="bucket img1-t5 center">자격증 취득 (관광통역, 무역영어, 생활체육3급)</div>
