--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         <div class="bucket img1-t5 center">자격증 취득 (관광통역, 무역영어, 생활체육3급)</div>
         <div class="bucket img1-t6 center">월 1~2회 이력서 제출(이직 꾸준히 시도)</div>
         <div class="bucket img2-t6 center">대출 원금 년 최소 1000만 이상 갚기</div>
-        <div class="bucket img2-t3 center">투자금 매분기 120만원 증액</div>
+        <div class="bucket img2-t3 center">투자금 매분기 120만원 증액(총 2,300만원 만들기)</div>
     </div>
 
 </body>
